--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "bootstrapp": "^0.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "ig": "^0.0.5",
     "request": "^2.88.2"
